trying to fixxie dumby alignments

--- a/views/indexStyle.css
+++ b/views/indexStyle.css
@@ -15,6 +15,11 @@ body, .flex-container {
     text-align: center;
 }
 
+.form-container {
+    width: 80%;
+    margin: 20px auto;
+}
+
 .form {
     background-color: #4e4e50;
     padding: 20px;
@@ -24,7 +29,6 @@ body, .flex-container {
     align-items: center;
     justify-content: space-around;
     width: 100%;
-    margin: auto;
 }
 
 .input-field, 
